# hsmarkov

./: README.md  hsmarkov.cabal
resources/: functional.txt  haskell.txt  prefix_list.txt  quangle-wangle.txt  quixote.txt
src/: Main.hs
